--- a/Automation/bin/.gitignore
+++ b/Automation/bin/.gitignore
@@ -1,14 +1,15 @@
-/Assignments/
 /DropdownHandling/
 /KeyBoardActions/
+/Assignments/
+/JavaScriptExcecutor/
 /Locators/
-/MaouseActions/
+/MouseActions/
 /MyScripts/
+/ScannerClass/
 /Synchronization/
+/ToTakeCreenshot/
 /WebElementMethods/
+/WorkingWithActionclass/
 /WorkingWithSearchcontextMethod/
 /Xpath/
-/ScannerClass/
-/ToTakeCreenshot/
-/WorkingWithActionclass/
-/MouseActions/
+/PopUpHandling/
