--- a/Automation/bin/.gitignore
+++ b/Automation/bin/.gitignore
@@ -1,6 +1,3 @@
-/PopUpHandling/
-/WindowBasedPopUpHandling/
-/MyScripts/
-/Assignments/
-/Frames/
-/DataDrivenFramework/
+/WorkingWithActionclass/
+/WorkingWithSearchcontextMethod/
+/Xpath/
